apps/gateway-api/httproute-openvino.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openvino
  namespace: openvino
spec:
  parentRefs:
    - name: technovise-gateway
      namespace: istio-ingress
  hostnames:
    - "openvino.technovise.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: openvino
          port: 8888
